--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,8 @@
   "homepage": "https://github.com/DACUS1995/ChromeExtension---Facebook-Birthday-Butler#readme",
   "dependencies": {
     "pikaday": "^1.7.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.1.0"
   }
 }
